# rantsy

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md  bindgen.sh.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-approve_dependabot.yml  ci.yml  deny_warnings.yml  rust_auto_format.yml
src/: lib.rs  rant.rs  types.rs
